zatca jobs and more tests and correctness
